@@ -128,10 +128,11 @@ parseCommandLine(int argc, const char ** argv,
     if (cmdlineP->ysizeSpec > 1)
        pm_error("You can specify -height only once");
 
-    if (xalignSpec && (cmdlineP->leftSpec || cmdlineP->rightSpec))
+    if (xalignSpec && (cmdlineP->leftSpec || cmdlineP->rightSpec)
+	           && !mwidthSpec)
         pm_error("You cannot specify both -halign and -left or -right");
-
-    if (yalignSpec && (cmdlineP->topSpec || cmdlineP->bottomSpec))
+    if (yalignSpec && (cmdlineP->topSpec || cmdlineP->bottomSpec)
+	           && !mheightSpec)
         pm_error("You cannot specify both -valign and -top or -bottom");
 
     if (xalignSpec && (!cmdlineP->xsizeSpec && !mwidthSpec) )
